- fixed sections to have container classes - exchanged fonts - fixed vertical alignment for sections - fixed sections to be the size of the viewport - removed commented code - applied p, h1, h2 font styles

--- a/css/main.css
+++ b/css/main.css
@@ -7,17 +7,38 @@
 
 
 body, html {
-    height: 100%; 
-    font-family: "Antic Didone", serif; 
-  
+    height: 100%;
+}
+
+h1, h2, h3, h4 {
+  font-family: "Varela Round", serif;
+}
+
+p {
+  font-size: 17px;
+  line-height: 1.2;
+  font-weight: 300;
+  font-family: "Open Sans", serif;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+h2 {
+  font-size: 43px;
+  margin:0;
+  padding: 0;
 }
 
 .navbar{
   padding-top: 10px;
   position:fixed;
   top:0px;
-  width:100%; 
-  height:75px; 
+  width:100%;
+  height:75px;
   z-index:9999;
   display: none;
 }
@@ -26,56 +47,61 @@ body, html {
   padding-top: 10px;
 }
 
-
 .navbar-brand{
   color: #1ABC9C;
   font-size: 30px;
 }
 
+.vertical-align {
+  display: flex;
+  align-items: center;
+}
+
 section {
-  height: 650px;
-  padding: 90px 45px;
+  height: 100vh;
 }
 
 #home{
   height: 100%;
-  padding-top: 110px;
-  background-color: #FDBD57;
+  background-color: #f8f8f8;
 }
 
-#health{
-  background-color: #E1615D;
-  text-align: center;
+.health-section{
+  background: url("../img/health-background.jpg") no-repeat center;
+  background-size: cover;
+  color: #fff;
+}
+
+.health-section p {
+  font-size: 21px;
+  line-height: 1.2;
+  padding: 20px 0 0;
+
 }
 
 #savings{
-  background-color: #41A9CC;
+  background-color: #f8f8f8;
+
 }
 
-
-#savings article img{
-  padding: 60px 60px;
+.media-body p  {
+  font-size: 21px;
+  color: #b3b3b3;
 }
 
-#savings article h3{
-  padding: 120px 0 0 60px;
-}
-
-#savings article p{
-  padding: 0 60px;
+.save-images {
+  width: 180px;
 }
 
 #locations{
   background-color: #8A63B3;
-  text-align: center;
 }
 
 footer{
   background-color: #F8F8F8;
-  overflow: hidden;
 }
 
-#dot-nav{    
+#dot-nav{
   right: 10px;
   top: 50%;
   margin-top: -50px;
@@ -115,9 +141,9 @@ footer{
 }
 
 .awesome-tooltip + .tooltip > .tooltip-inner {
-    background-color: #1ABC9C; 
-    color: #f5f5f5; 
-    border: 1px solid #1ABC9C; 
+    background-color: #1ABC9C;
+    color: #f5f5f5;
+    border: 1px solid #1ABC9C;
 }
 
 .awesome-tooltip + .tooltip.left > .tooltip-arrow{
